--- a/views/client/pages/employer/login.pug
+++ b/views/client/pages/employer/login.pug
@@ -25,8 +25,7 @@ block main
                 name="password"
                 required
                 )
-            a(href='CreateNewPw.html')
-                input.pwform-submit(type='submit' value='Quên mật khẩu')
+            a(href="/employer/password/forgot") Quên mật khẩu?
             div(class="form-group")
                 button(
                 type="submit"
