--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -13,11 +13,11 @@ include ../mixins/sub-menu.pug
           a(href='/job') Việc làm
           ul.sub-menu
             li
-              a(href='') Kĩ năng
+              a(href='/job') Kĩ năng
               ul.sub-menu
                 +sub-menu(layoutJobCategory)
             li
-              a(href='') Khu vực
+              a(href='/job') Khu vực
               ul.sub-menu
                 +sub-menu(layoutPositionCategory)
         li
