--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -92,3 +92,161 @@
   display: flex;
   justify-content: center;
 }
+
+body{
+  overflow-x: hidden;
+}
+.container{
+  position: relative;
+  width: 100%;
+}
+.main{
+  position: absolute;
+  width: calc(100% - 300px);
+  min-height: 100vh;
+  left: 300px;
+  background: #f5f5f5;
+}
+.top-bar{
+  position: fixed;
+  height: 60px;
+  width: calc(100% - 300px);
+  background: #fff;
+  display: grid;
+  grid-template-columns: 10fr 0.4fr 1fr;
+  grid-gap: 5px;
+  align-items: center;
+  color: #444;
+  padding: 0 20px;
+  box-shadow: 0 4px 8px 0 rgb(29, 29, 29);
+  z-index: 1;
+}
+.cards{
+  margin-top: 10px;
+  width: 100%;
+  margin-left: -160px;
+  padding: 35px 20px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
+}
+.cards .card1{
+  background: linear-gradient(45deg, #ffffff, #2b87ff);
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0.4);
+}
+.cards .card2{
+  background: linear-gradient(45deg, #ffffff, #fd4646);
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0.4);
+}
+.cards .card3{
+  background: linear-gradient(45deg, #ffffff, #d2f84a);
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0.4);
+}
+.cards .card4{
+  background: linear-gradient(45deg, #ffffff, #2bff6e);
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0.4);
+}
+.cards .card5{
+  background: linear-gradient(45deg, #ffffff, #a92fff);
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0.4);
+}
+.cards .card6{
+  background: linear-gradient(45deg, #ffffff, #fd8f58);
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0.4);
+}
+.cards .card7{
+  background: linear-gradient(45deg, #ffffff, #fd3fe4);
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0.4);
+}
+.number{
+  font-size: 30px;
+  font-weight: 500;
+  color: #444;
+}
+.card-name{
+  color: #444;
+  font-weight: 600;
+}
+.icon-box i{
+  font-size: 25px;
+  color: #444;
+}
+.tables{
+  width: 100%;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-gap: 20px;
+  align-items: self-start;
+  padding: 0 20px 20px 20px;
+}
+.recent-jobs{
+  min-height: 300px;
+  background: #fff;
+  margin-left: -160px;
+  padding: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+.heading{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #444;
+}
+
+.btn5{
+  padding: 5px 10px;
+  background: linear-gradient(45deg, #ffffff, #fd9c9c);
+  text-decoration: none;
+  text-align: center;
+  color: #000000;
+}
+table{
+  margin-top: 10px;
+  width: 100%;
+  border-collapse: collapse;
+}
+thead td{
+  font-weight: 600;
+  color: #444;
+}
+table tr{
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+tbody tr:hover{
+  background: #444;
+  color: white;
+}
+table tbody tr:last-child{
+  border-bottom: none;
+}
+td{
+  padding: 9px 5px;
+}
