--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -25,3 +25,5 @@
           a(href=`/${prefixAdmin}/accounts`) Tài khoản
       li
         a(href=`/${prefixAdmin}/statis`) Thống kê
+      li
+        a(href=`/${prefixAdmin}/setting/general`) Cài đặt chung
