--- a/views/client/partials/footer.pug
+++ b/views/client/partials/footer.pug
@@ -6,9 +6,9 @@ footer
           | We are committed to providing you with the best possible service. Trust us and choose us!
         .social
           // Liên kết truyền thông
-          a(href='https://www.facebook.com/profile.php?id=100044766801358&mibextid=ZbWKwL')
+          a(href=settingsGeneral.facebook target="_blank")
             i.fa-brands.fa-square-facebook
-          a(href='https://www.tiktok.com/@mpq.qui.03?_t=8n6buY1cYMC&_r=1')
+          a(href=settingsGeneral.tiktok target="_blank")
             i.fa-brands.fa-tiktok
       #recruitment.col
         h3 Tuy&#x1EC3;n D&#x1EE5;ng
@@ -29,8 +29,8 @@ footer
           // Chi tiết liên hệ
           i.fa-solid.fa-location-crosshairs
           p
-            | TR&#x1AF;&#x1EDC;NG &Dstrok;&#x1EA0;I H&#x1ECC;C NAM C&#x1EA6;N TH&#x1A0; - 168, Nguy&#x1EC5;n V&abreve;n C&#x1EEB; (n&#x1ED1;i d&agrave;i), P. An B&igrave;nh, Q. Ninh Ki&#x1EC1;u, TP. C&#x1EA7;n Th&#x1A1;
+            | #{settingsGeneral.address}
         .contact-detail
           // Chi tiết liên hệ
           i.fa-solid.fa-phone
-          p (+84) -907297845 -367068482
+          p (+84) #{settingsGeneral.phone}
