--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -5,7 +5,7 @@ include ../mixins/sub-menu.pug
     nav.container
       p.logo
         i.fas.fa-briefcase
-        |  TUYỂN DỤNG
+        |  #{settingsGeneral.websiteName}
       ul#main-menu
         li
           a(href='/') Trang Chủ
