--- a/views/admin/pages/setting/general.pug
+++ b/views/admin/pages/setting/general.pug
@@ -22,7 +22,7 @@ block main
       class="form-group"
       upload-image
     )
-      label(for="banner") Banner
+      label(for="banner") Background
       input(
         type="file"
         class="form-control-file"
