--- a/views/admin/pages/dashboard/index.pug
+++ b/views/admin/pages/dashboard/index.pug
@@ -1,5 +1,21 @@
 extends ../../layouts/default
 block main
-    h1 Trang tổng quan
-    div #{`Tên : ${user.fullName}`}
-    div #{`Quyền hạn : ${role.title}`}
+  h1 Trang tổng quan
+  .row.mt-4
+    .col-12
+      .card.mb-4
+        .card-header Thông tin tài khoản
+        .card-body
+          if(user.avatar)
+            img(
+              src=user.avatar
+              style="height: 200px;margin-bottom: 15px;"
+            )
+          if(user.fullName)
+            p Họ tên: <b>#{user.fullName}</b>
+          if(user.email)
+            p Email: <b>#{user.email}</b>
+          if(user.phone)
+            p Số điện thoại: <b>#{user.phone}</b>
+          if(role.title)
+            p Phân quyền: <b>#{role.title}</b>
