--- a/views/client/pages/home/detail.pug
+++ b/views/client/pages/home/detail.pug
@@ -1,5 +1,8 @@
 extends ../../layouts/default.pug
+include ../../mixins/alert.pug
 block main
+    +alert-error(5000)
+    +alert-success(5000)
     .view-company
         h3.heading
             <i class="fa-solid fa-window-minimize"></i>
@@ -22,11 +25,22 @@ block main
                 div(class="mb-4") <i class="fa-solid fa-phone"></i> #{detailJob.phoneNumber}
             if (detailJob.email)
                 div(class="mb-4") <i class="fa-solid fa-envelope"></i> #{detailJob.email}
-            form(
-                action=`/cart/add/${detailJob.id}`
-                method="POST"
+            if (!profile && !employer && !user)
+                a(href="/candidate/login" class="btn btn-success btn-block apply") Ứng tuyển 
+            else if (profile && !employer)
+                form(
+                    form-apply
+                    action=`/employer/applied/add/${user.id}/${detailJob.id}`
+                    method="POST"
                 )
-                button(
-                type="submit"
-                class="btn btn-success btn-block apply"
-                ) Ứng tuyển
+                    button(
+                        button-apply
+                        type="submit"
+                        class="btn btn-success btn-block apply"
+                    ) Ứng tuyển
+            else
+                if (!employer)
+                    button(
+                        class="btn btn-success btn-block apply"
+                        none-apply
+                    ) Ứng tuyển
