--- a/views/client/pages/error/404.pug
+++ b/views/client/pages/error/404.pug
@@ -1,1 +1,2 @@
+<a href="/" style="text-decoration: none; font-size: 20px; color: green"><b>Trang chủ</b></a>
 <img src="https://res.cloudinary.com/dql6irmti/image/upload/v1719129200/bxxklvygt3qpwnvbtt6v.webp" alt="" style="width: 100%; height: 100%">
