--- a/views/client/pages/job/index.pug
+++ b/views/client/pages/job/index.pug
@@ -3,6 +3,7 @@ include ../../mixins/alert.pug
 include ../../mixins/pagination.pug
 block main
   +alert-error(5000)
+  +alert-success(5000)
   .search
     form#search-box(action='')
       input#search-text(type='text' placeholder='Nhập công việc bạn muốn tìm...' name="keyword" value=keyword)
